--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,15 +1,18 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Kollywood Game App Backend",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",   
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "keywords": [],
-  "author": "",
+  "author": "Vishal K",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
